<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingInActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--TITTLE-->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="65dp"
            android:text="@string/create_account"
            android:textColor="@color/primaryColor"
            android:textSize="24dp"
            android:textStyle="bold" />

        <!--EMAIL-->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:importantForAutofill="no"/>

        <!--NAME-->
        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:importantForAutofill="no"/>

        <!--SURNAME-->
        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/surname"
            android:textColorHint="@color/grey"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <!--PASSWORD-->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:importantForAutofill="no"/>

        <!--REPEAT PASSWORD-->
        <EditText
            android:id="@+id/editTextRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey"
            android:importantForAutofill="no"/>

        <!--USERNAME-->
        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="65dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:importantForAutofill="no"/>

        <!--BUTTONS-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--GO BACK BUTTON-->
            <Button
                android:id="@+id/btnGoBack"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginStart="65dp"
                android:layout_marginTop="35dp"
                android:backgroundTint="@color/primaryColor"
                android:elevation="2dp"
                android:shadowColor="#5C5C5C"
                android:text="<"
                android:textColor="#FFFFFF"
                android:textSize="25dp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:strokeColor="#FFFFFF" />

            <!--SING IN BUTTON-->
            <Button
                android:id="@+id/btnSingIn2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="65dp"
                android:backgroundTint="@color/primaryColor"
                android:elevation="2dp"
                android:shadowColor="#5C5C5C"
                android:text="@string/sing_in"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="5dp"
                app:strokeColor="#FFFFFF" />
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>