<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--USERNAME-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="175dp"
            android:layout_marginRight="60dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:drawableStart="@drawable/account_icon"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--PASSWORD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--BUTON LOGIN-->
        <Button
            android:id="@+id/btnLogin"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/primaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF" />

        <!--BUTON FORGOT PASSWORD-->
        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#FFFFFF"
            android:elevation="2dp"
            android:shadowColor="#FFFFFF"
            android:text="@string/forgot_password"
            android:textColor="@color/primaryColor"
            android:textSize="14sp"
            android:textStyle="normal"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF" />

        <!--LINE-->
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="#808080" />

        <!--BUTON SING IN-->
        <Button
            android:id="@+id/btnSingIn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="105dp"
            android:backgroundTint="@color/secondaryColor"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/sing_in"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#FFFFFF" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>